samples/_failures_safe/1761657088_7548b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cf5bb8e.c: In function ‘main’:
./samples/SAFE/__tmp_4cf5bb8e.c:176:5: error: expected declaration or statement at end of input
  176 |     for (int i = 0; i < n; i++) {
      |     ^~~
./samples/SAFE/__tmp_4cf5bb8e.c:176:5: error: expected declaration or statement at end of input
